[package]
name = "diffdiagram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3"
url = "2.4"
tree-sitter = "0.20.10"
tree-sitter-c-sharp = "0.20.0"
regex = "1.8"
petgraph = "0.6.3"
unidiff = "0.3"
